comments are added

--- a/05-cart-quantity.html
+++ b/05-cart-quantity.html
@@ -53,8 +53,13 @@
 				
 				// if a variable is not going to change we declare is with const 
 				// if we are going to change a varible later we assign it with let
+				// we could use "var" too , it is same as let 
+				// we can use typeof to see the type of a variable 
+				// for instance type of 3 is number and type of "hello" is string
 
-				let quantity = 0;
+				//let quantity = 0;
+				var quantity = 0;
+
 			</script>
 
 		</body>
