--- a/08-objects.html
+++ b/08-objects.html
@@ -31,6 +31,8 @@
             console.log(product);
             */
 
+
+            /*
             const product2 = {
                 name: 'shirt',
                 // brackets are optional here we can say 'delivery_time'
@@ -85,6 +87,65 @@
             // to get the value inside of a localStorage we use getItem(name)
 
             console.log(localStorage.getItem('message'));
+
+            */
+
+            // auto-boxing
+            // javascript automatically wraps the string in an object like a box
+            // auto-boxing works with other values other than null and undefined 
+            console.log('hello'.length);
+            console.log('hello'.toUpperCase());
+
+            // objects are references
+
+            const object1 = {
+                'message' : 'hello'
+            };
+
+            // they both point the same reference 
+            const object2 = object1;
+
+            object1.message = 'Good Job';
+
+            console.log(object1);
+            console.log(object2);
+
+            const object3 = {
+                'message' : 'Good Job'
+            };
+
+            // this compares references they are not the same so false
+            console.log(object1 === object3);
+            // true 
+            console.log(object1 === object2);   
+
+            const object4 = {
+                message : 'Good Job'
+            };
+
+            /*
+            // destructuring
+            const message = object4.message;
+            */
+
+            // this will take the message property out of object4 and save it in a variable called message 
+            // this does same thing as the code block above 
+            const {message} = object4;
+            console.log(message);   
+
+            const object5 = {
+                //message : message
+                // does the samething as the line above 
+                message,
+                // shorthand 
+                // we don't need to write function and give a name after method decleration we can do it like that
+                method() {
+                    console.log('method');
+                }
+            };
+
+            console.log(object5);
+            object5.method();
 
         </script>
     </body>
