--- a/09-dom-projects.html
+++ b/09-dom-projects.html
@@ -32,6 +32,10 @@
         <p>
             Rock Paper Scissors
         </p>
+        
+        <a href="">
+
+        </a>
 
         <p>
             Amazon Shipping Calculator
@@ -43,8 +47,55 @@
             Orders over $40 = FREE shipping.
         </p>
 
+        <!-- clicks,keydowns are events and onclick,onkeydown are event listeners-->
+        <!-- every event listener gets an event object-->
+    
+        <input placeholder="Cost of order" class="js-cost-input" onkeydown="
+            handleCostKeyDown(event);
+        ">
+        <button onclick="
+            calculateTotal();
+        ">
+        Calculate</button> 
+
+        <p class="js-total-cost"></p>
 
         <script> 
+
+            // window object represents the browser
+            // document , pop-ups , terminal are also a part of the window
+            // we don't have to write window,js will automatically add it 
+
+            //window.document
+            // does the same thing as console.log
+            //window.console.log('window');
+
+            function handleCostKeyDown(event) {
+                if(event.key === 'Enter') {
+                    calculateTotal();
+                }
+            }
+
+            function calculateTotal(){
+                const inputElement = document.querySelector('.js-cost-input');
+
+                // for other elements to access the inside of them we used .innerHTML 
+                // but for input elements we use .value                
+
+                // whenever we get a value from the DOM , the value would be a string
+                // but we can use Number() function to convert that string to a number 
+
+                // we can also use String() function to turn a number to a String
+
+                let cost = Number(inputElement.value);
+
+                if(cost < 40){
+                    cost = cost + 10; 
+                }
+
+                document.querySelector('.js-total-cost').innerHTML = `$${cost}`;
+
+            }
 
             function subscribe() {
                 const buttonElement = document.querySelector('.js-subscribe-button');
