--- a/09-dom.html
+++ b/09-dom.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <!-- DOM == doucment object model-->
+    <!-- DOM == document object model-->
 <html>
 
     <head>
@@ -27,6 +27,8 @@
             // when we start with a dot it will look for a class
             // class selector 
 
+            // DOM combines JS and HTML together 
+            // it gives JS the full control of webpage
             const buttonElement = document.querySelector('.js-button');
             console.log(buttonElement);
         
