--- a/11-arrays-and-loops.html
+++ b/11-arrays-and-loops.html
@@ -11,6 +11,7 @@
 
     <body>
         <script> 
+            /*
             const myArray = [10,20,30];
             console.log(myArray);
             console.log(myArray[0]);
@@ -32,6 +33,32 @@
             // it takes two values first one is the starting index,second one is determines how many values we want to remove from our array starting from starting index   
             myArray.splice(0,1);
             console.log(myArray);
+            */
+            /*
+            let i = 1;
+
+            while(i<=5){
+                console.log(i);
+                i++;
+            }
+
+
+            for(let i = 1;i<=5;i++){
+                console.log(i);
+            }
+            */
+
+            const todoList = [
+                'make dinner',
+                'wash dishes',
+                'watch youtube'
+            ];
+
+
+            for(let i = 0;i<todoList.length;i++){
+                console.log(todoList[i]);
+            }
+
 
         </script>
     </body>
