todo list is done

--- a/11-todo-list.html
+++ b/11-todo-list.html
@@ -20,6 +20,11 @@
             addTodo();
         ">Add</button>
 
+        <!-- div does not have default styling-->
+        <div class="js-todo-list">  
+            text
+        </div>
+
         <script src="scripts/11-todo-list.js"></script>
     </body>
 
