todo list project done

--- a/11-todo-list.html
+++ b/11-todo-list.html
@@ -7,6 +7,7 @@
             Todo List
         </title>
 
+        <link rel="stylesheet" href="styles/11-todo-list.css">
     </head>
 
     <body>
@@ -15,15 +16,16 @@
             Todo List
         </p>
 
-        <input placeholder="Todo name" class="js-name-input">
-        <button onclick="
-            addTodo();
-        ">Add</button>
+        <div class="todo-input-grid">
+            <input placeholder="Todo name" class="js-name-input name-input">
+            <input type="date" class="js-due-date-input due-date-input"> 
+            <button onclick="
+                addTodo();
+            " class="add-todo-button">Add</button>
+        </div>
 
         <!-- div does not have default styling-->
-        <div class="js-todo-list">  
-            text
-        </div>
+        <div class="js-todo-list todo-grid"></div>
 
         <script src="scripts/11-todo-list.js"></script>
     </body>
