--- a/12-advanced-functions.html
+++ b/12-advanced-functions.html
@@ -35,6 +35,8 @@
                 console.log('timeout');
             }, 3000 );
 
+            console.log('next line');
+
         </script>
     </body>
 
