--- a/12-advanced-functions.html
+++ b/12-advanced-functions.html
@@ -31,11 +31,21 @@
             // setTimeout is a build in parameter first parameter is a function we want to run in the future 
             // second paramter is how long to wait before running this function in miliseconds
 
+            // asynchronous code
+            // it does not block our code 
             setTimeout(function () {
                 console.log('timeout');
             }, 3000 );
 
+            // it does not wait for setTimeout code to finish 
+            // first this executed and then setTimeout code 
             console.log('next line');
+
+            // it will keep running the function every 3 seconds  
+            // it is also an asynchronous code
+            setInterval(function() {
+                console.log('interval');
+            },3000);
 
         </script>
     </body>
